# yamnet

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: lint.yaml  pytest.yaml  release.yaml
src/: api.py
tests/: test_app.py
