[tool.poetry]
name = "yamnet-audio-event-classification-api"
version = "0.1.0"
description = "An audio event classification API using the YAMNet model"
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
tensorflow = {extras = ["and-cuda"], version = ">=2.16.0,<2.17.0"}
tensorflow-hub = ">=0.16.0,<0.17.0"
numpy = "^1.26.4"
scipy = "^1.14.0"
pydub = "^0.25.1"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
